# Proposal

./: CMakeLists.txt  Mancala.cxx  PROPOSAL.md  board.cxx  board.hxx  controller.cxx  controller.hxx  model.cxx  model.hxx  model_gameplan.cxx  model_test.cxx  view.cxx  view.hxx
